Do not include column in name when saving backup preset

BUG: 391325